--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 	{% include socials.html %}
 
 	<div class="footer__copyright">
-		<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span>
+		<span>© 1996-{{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_owner }}</span>
 	</div>
 
 </footer>
