--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,8 @@
 <!doctype html>
 
-<html class="no-js" lang="en">
+<html class="no-js" lang="de">
 
 <head>
-
-
-	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-	{{ site.data.settings.basic_settings.site_title }}
-
-	Simples Theme by https://jekyllthemes.io
-	Premium + free Jekyll themes for your blog or website.
-
-	- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -22,6 +11,7 @@
 	<link rel="shortcut icon" href="{{ site.data.settings.basic_settings.favicon_image | relative_url }}">
 	<title>{% if page.url == "/" %}{{ site.data.settings.basic_settings.site_title }} – {{ page.title }}{% else %}{{ page.title }} – {{ site.data.settings.basic_settings.site_title }}{% endif %}</title>
 	<meta name="description" content="{% if page.description %}{{ page.description | strip_html | xml_escape }}{% else %}{{ page.excerpt | strip_html | xml_escape }}{% endif %}">
+	<meta name="author" content="{{ site.data.settings.basic_settings.site_owner }}">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -92,7 +82,7 @@
 
 
 	<!-- Javascript Assets -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="{{ '/js/plugins-min.js' | relative_url }}"></script>
 	<script src="{{ '/js/simples-min.js' | relative_url }}"></script>
 
